# RenderPipeline

./: .codeclimate.yml  .flake8  .gitignore  .gitmodules  .pylintrc  .travis.yml  Code Conventions.txt  Compute Shader Performance Stats.txt  GBuffer Specs.txt  LICENSE.txt  MANIFEST.in  ModelGuides.txt  Performance.xlsx  README.md  README.rst  Specs.txt  Techniques.txt  Tmain.py  __init__.py  configuration.prc  editor.py  index.rst  main.py  pipeline.ini  profile.bat  render_pipeline_importer.py  scatteringPlayground.py  setup.py  setup_tools.py  start_daytime_editor.py  start_plugin_configurator.py  todoForLater.txt
Assets/: Bricks.smap
BlenderMaterialLibrary/: MaterialLibrary.blend  MaterialLibrary.blend1  MaterialLibrary.blend2  MaterialLibrary.egg  MaterialLibrary.egg.bam
Code/: AbstractMethodException.py  AdaptiveBrightness.py  AmbientOcclusion.py  AmbientOcclusionManager.py  Antialiasing.py  AntialiasingManager.py  BaseManager.py  BetterCheckbox.py  BetterOnscreenImage.py  BetterOnscreenText.py  BetterShader.py  BufferViewerGUI.py  BugReporter.py  CheckboxCollection.py  CheckboxWithLabel.py  CloudManager.py  CommonResources.py  CommonStages.py  DebugObject.py  DirectionalLight.py  DistributedTaskManager.py  DynamicObjectsManager.py  Effect.py  EffectLoader.py  FirstPersonController.py  Framework.py  GIHelperLight.py  GPUCommandQueue.py  GlobalIllumination.py  Globals.py  IESLoader.py  Light.py  LightLimits.py  LightManager.py  LightType.py  MemoryMonitor.py  MountManager.py  MovementController.py  PipelineExtensions.py  PipelineGuiManager.py  (+28 more)
Config/: configuration.prc  daytime.yaml  pipeline.ini  pipeline.yaml  plugins.cfg  plugins.ini  plugins.yaml  time_of_day.ini
Core/: Build - Linux.sh  Build - Windows.bat  CMakeLists.txt  RPCore.pyd  finalize.py  interrogate.py  testModule.py
Core/Source/: DemoClass.cxx  DemoClass.h  InterrogateModule.cxx  InterrogateModule.in  InterrogateWrapper.cxx
Docs/: conf.py  index.rst
Doxygen/: Doxyfile
Editor/: Editor.py  EditorCategory.py  EditorGUI.py  EditorShowbase.py  README.md
Effects/: Default.yaml  DisplayVoxels.effect  ExampleTreeInstanced.effect  LightDebug.effect  MaterialBlend4.yaml  Skybox.yaml  juzzuj-fragment.glsl  juzzuj-vertex.glsl  material_blend4.yaml
Log/: error.txt  log.txt
MeshSimplifier/: MeshSimplifier.py  main.py
Models/: convertToBam.bat
Native/: CMakeLists.txt  __init__.py  compile_windows.bat  interrogate.bat  prepare_windows.bat
Native/Scripts/: compile.py  finalize.py  interrogate.py  pandapath.py  setup_native.py  vc_api.py
Native/Source/: GPUCommand.I  GPUCommand.cpp  GPUCommand.h  GPUCommandList.cpp  GPUCommandList.h  Light.I  Light.cpp  Light.h  LightStorage.cpp  LightStorage.h  MeshSplitter.cpp  MeshSplitter.h  PointLight.cpp  PointLight.h  SGDataset.cpp  SGDataset.h  SGNode.cpp  SGNode.h  SGTriangleStrip.h  StaticGeometry.cpp  StaticGeometry.h  StaticGeometryHandler.cpp  StaticGeometryHandler.h  common.h  config_rsnative.N  config_rsnative.cpp  config_rsnative.h  init.py.template
Native/Source/GPUCommand/: GPUCommand.I  GPUCommand.h  GPUCommandList.h
Native/Source/LightSystem/: IESDataset.cpp  IESDataset.h  Light.I  Light.h  LightStorage.cpp  LightStorage.h  PSSMCameraRig.cpp  PSSMCameraRig.h  PSSMHelper.cpp  PSSMHelper.h  PointLight.I  PointLight.cpp  PointLight.h  RPLight.I  RPLight.cpp  RPLight.h  RPPointLight.I  RPPointLight.cpp  RPPointLight.h  RPSpotLight.I  RPSpotLight.cpp  RPSpotLight.h  ShadowSource.h
Native/Source/StaticGeometry/: MeshSplitter.cpp  MeshSplitter.h  SGDataset.cpp  SGDataset.h  SGFinishNode.cpp  SGFinishNode.h  SGNode.cpp  SGNode.h  SGRenderNode.cpp  SGRenderNode.h  SGTriangleStrip.cpp  SGTriangleStrip.h  StaticGeometryHandler.cpp  StaticGeometryHandler.h
Plugins/: __init__.py
Plugins/Scattering/Resources/HosekWilkieScattering/: .gitignore  CMakeLists.txt  README.md  cmake_windows.bat  config.ini  generate_table.py  main.cpp  update_module_builder.py
Plugins/Scattering/Resources/HosekWilkieScattering/Source/: ArHosekSkyModel.cpp
Samples/: !!README!!.md  README.md  download_samples.py
Scene/: ContactTest.egg  Cube.egg  DemoScene.blend  Plane.egg  SSDOTest.egg.bam  Scene1.egg  Scene2.egg  Scene4.bam  Scene4.egg  convertToBam.bat
Shader/: AdaptiveBrightnessDownsample.fragment  AdaptiveBrightnessDownsampleFinal.fragment  AdaptiveBrightnessFirstPass.fragment  ApplyLighting.compute  ApplyLighting.fragment  BilateralHalfresBlur.frag.glsl  BilateralUpscale.frag.glsl  BloomBlurH.fragment  BloomBlurV.fragment  BloomExtract.fragment  BloomMerge.fragment  BlurHorizontal.fragment  BlurOcclusionHorizontal.fragment  BlurOcclusionVertical.fragment  BlurVertical.fragment  CloudBlurH.fragment  CloudBlurV.fragment  CombineGIandAO.fragment  CombineOcclusion.fragment  Combiner.fragment  ComputeGI.fragment  ComputeOcclusion.fragment  CopyToShadowAtlas.fragment  DefaultObjectShader.fragment  DefaultObjectShader.tesseval  DefaultObjectShader.vertex  DefaultPostProcess.vert.glsl  DefaultPostProcess.vertex  DefaultPostProcess.vertex.glsl  DefaultShadowCaster.fragment  DefaultShadowCaster.geometry  DefaultShadowCaster.vertex  Downsample.fragment  DownsampleFinalPass.fragment  DownsampleFirstPass.fragment  EdgePreservingBlurHorizontal.fragment  EdgePreservingBlurVertical.fragment  ExposurePass.fragment  ExtractNormals.fragment  Final.fragment  (+44 more)
Shared/: MovementController.py
Time of Day Manager/: README.txt
Toolkit/: README.md
classes/: AmbientOcclusion.py  Antialiasing.py  BetterShader.py  ConsoleColors.py  DebugObject.py  DirectionalLight.py  FastText.py  FirstPersonController.py  Globals.py  HemiPointLight.py  Light.py  LightManager.py  LightType.py  (+18 more)
plugins/Scattering/Resources/HosekWilkieScattering/: CMakeLists.txt  README.md  build.py
plugins/Scattering/Resources/HosekWilkieScattering/Scripts/: common.py  finalize.py  interrogate.py  setup.py
plugins/Scattering/Resources/HosekWilkieScattering/Source/: ArHosekSkyModelData_CIEXYZ.data  ArHosekSkyModelData_RGB.data  HWSScattering.h  Interrogate.in  InterrogateModule.cpp  InterrogateWrapper.cpp
(+2265 files in other folders)
